--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -2,3 +2,8 @@
 <h3>Introduzione ad Angular e TypeScript</h3>
 <p>Primo esempio di "databinding", io sono: {{myName}}</p>
 <button (click) = "changeName()">Cambiami nome!</button>
+
+<hr>
+
+<h3>Utilizzo dei componenti: </h3>
+<app-server></app-server>
